# physics-sim

./: README.md  chaos-pendulum.py  client.py  demo.py  pyproject.toml
physim/: __init__.py  constraint.py  solver.py  vector.py  verlet_object.py
src/physim/: __init__.py  solver.py  vector.py  verlet_object.py
