[tool.pdm]

[project]
name = "physics-sim"
version = "0.1.0"
description = "a school project about simulating physics"
authors = [
    {name = "Paul Frische", email = "61984114+paulfrische@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
